Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114938

2dpainting example crashes on QNX

    XMLWordPrintable

Details

    • QNX
    • c9ddc4b8e (dev), 14ea2a366 (6.7), 5f6745196 (tqtc/lts-6.5)

    Description

      0  0x0000005ac30866cd in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter*, QWidgetRepaintManager*) () from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Widgets.so.6.6.0
      #1  0x0000005ac309c9d2 in QWidgetRepaintManager::paintAndFlush() () from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Widgets.so.6.6.0
      #2  0x0000005ac309ce27 in QWidgetRepaintManager::sync(QWidget*, QRegion const&) ()
         from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Widgets.so.6.6.0
      #3  0x0000005ac30a6364 in QWidgetWindow::handleExposeEvent(QExposeEvent*) () from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Widgets.so.6.6.0
      #4  0x0000005ac30a6dab in QWidgetWindow::event(QEvent*) () from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Widgets.so.6.6.0
      #5  0x0000005ac3033c51 in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
         from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Widgets.so.6.6.0
      #6  0x0000005ac303d764 in QApplication::notify(QObject*, QEvent*) () from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Widgets.so.6.6.0
      #7  0x0000005ac4d56909 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Core.so.6.6.0
      #8  0x0000005ac3d16647 in QGuiApplicationPrivate::processExposeEvent(QWindowSystemInterfacePrivate::ExposeEvent*) ()
         from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Gui.so.6.6.0
      #9  0x0000005ac3d1742d in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) ()
         from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Gui.so.6.6.0
      #10 0x0000005ac3d7d94b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Gui.so.6.6.0
      #11 0x0000005ac41e11f6 in QUnixEventDispatcherQPA::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Gui.so.6.6.0
      #12 0x0000005ac4d62383 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
         from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Core.so.6.6.0
      #13 0x0000005ac4d5e6e6 in QCoreApplication::exec() () from /home/Qt/installer/6.6.0/qnx_x86/lib/libQt6Core.so.6.6.0
      #14 0x0000003bfa36918a in main (argc=1, argv=0x170a53ba08) at /home/Qt/installer/Examples/Qt-6.6.0/opengl/2dpainting/main.cpp:19

       

      Same happens also at least with cube example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tuomas.vaarala Tuomas Vaarala
            myrjana Marianne Yrjänä
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes